@13 fix header toggle overlapping button
git-svn-id: https://foxtrick.googlecode.com/svn/branches/0.13.0@12662 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/header-toggle.css
+++ b/content/resources/css/header-toggle.css
@@ -29,5 +29,8 @@ html[firefox] #ctl00_ctl00_CPContent_CPMain_spnToggleTournamentMatches {
 	position: relative;
 	top: -20px;
 }
+.findSimilarSmallPlayerPage {
+	top: 12px;
+}
 
 }
